--- a/package.json
+++ b/package.json
@@ -1,34 +1,53 @@
 {
-  "name": "qr-dine_client",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@radix-ui/react-slot": "^1.1.0",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.1",
-    "framer-motion": "^11.11.11",
-    "lucide-react": "^0.454.0",
-    "next": "15.0.2",
-    "next-themes": "^0.3.0",
-    "react": "19.0.0-rc-02c0e824-20241028",
-    "react-dom": "19.0.0-rc-02c0e824-20241028",
-    "tailwind-merge": "^2.5.4",
-    "tailwindcss-animate": "^1.0.7"
-  },
-  "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "15.0.2"
-  }
+	"name": "qr-dine_client",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"preinstall": "npx only-allow bun",
+		"dev": "next dev --turbopack --port 3001",
+		"build": "next build",
+		"start": "next start",
+		"lint": "eslint . --ext ts,tsx,js,jsx --report-unused-disable-directives --max-warnings 0",
+		"lint:fix": "eslint . --ext ts,tsx,js,jsx --fix",
+		"format": "prettier --write '**/*.{js,jsx,ts,tsx,json,css,scss,md}'"
+	},
+	"dependencies": {
+		"@radix-ui/react-slot": "^1.1.0",
+		"@tanstack/react-query": "^5.59.16",
+		"axios": "^1.7.7",
+		"class-variance-authority": "^0.7.0",
+		"clsx": "^2.1.1",
+		"framer-motion": "^11.11.11",
+		"lucide-react": "^0.454.0",
+		"next": "15.0.2",
+		"next-themes": "^0.3.0",
+		"nextjs-toploader": "^3.7.15",
+		"react": "19.0.0-rc-02c0e824-20241028",
+		"react-dom": "19.0.0-rc-02c0e824-20241028",
+		"recoil": "^0.7.7",
+		"sonner": "^1.5.0",
+		"tailwind-merge": "^2.5.4",
+		"tailwindcss-animate": "^1.0.7"
+	},
+	"devDependencies": {
+		"@tanstack/eslint-plugin-query": "^5.59.7",
+		"@types/lodash": "^4.17.12",
+		"@types/node": "^20.16.10",
+		"@types/react": "^18.3.11",
+		"@types/react-dom": "^18.3.0",
+		"@typescript-eslint/eslint-plugin": "^6.4.0",
+		"eslint": "^8.57.1",
+		"eslint-config-next": "15.0.2",
+		"eslint-config-prettier": "^9.1.0",
+		"eslint-config-standard-with-typescript": "^43.0.1",
+		"eslint-plugin-import": "^2.25.2",
+		"eslint-plugin-n": "^15.0.0 || ^16.0.0 ",
+		"eslint-plugin-prettier": "^5.2.1",
+		"eslint-plugin-promise": "^6.0.0",
+		"eslint-plugin-react": "^7.37.1",
+		"postcss": "^8.4.47",
+		"prettier": "^3.3.3",
+		"tailwindcss": "^3.4.13",
+		"typescript": "^5.6.2"
+	}
 }
