--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"private": true,
 	"scripts": {
 		"preinstall": "npx only-allow bun",
-		"dev": "next dev --turbopack --port 3001",
+		"dev": "next dev --turbo --port 3001",
 		"build": "next build",
 		"start": "next start",
 		"lint": "eslint . --ext ts,tsx,js,jsx --report-unused-disable-directives --max-warnings 0",
@@ -19,11 +19,11 @@
 		"clsx": "^2.1.1",
 		"framer-motion": "^11.11.11",
 		"lucide-react": "^0.454.0",
-		"next": "15.0.2",
+		"next": "14.2.14",
 		"next-themes": "^0.3.0",
 		"nextjs-toploader": "^3.7.15",
-		"react": "19.0.0-rc-02c0e824-20241028",
-		"react-dom": "19.0.0-rc-02c0e824-20241028",
+		"react": "^18.3.1",
+		"react-dom": "^18.3.1",
 		"recoil": "^0.7.7",
 		"sonner": "^1.5.0",
 		"tailwind-merge": "^2.5.4",
@@ -37,7 +37,7 @@
 		"@types/react-dom": "^18.3.0",
 		"@typescript-eslint/eslint-plugin": "^6.4.0",
 		"eslint": "^8.57.1",
-		"eslint-config-next": "15.0.2",
+		"eslint-config-next": "14.2.14",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-config-standard-with-typescript": "^43.0.1",
 		"eslint-plugin-import": "^2.25.2",
