--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,6 @@
 		},
 		"target": "ES2017"
 	},
-	"include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", ".eslintrc.yml"],
+	"include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", ".eslintrc.yml", "next.config.mjs"],
 	"exclude": ["node_modules"]
 }
