--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"version": "0.1.0",
 	"private": true,
 	"scripts": {
-		"preinstall": "npx only-allow bun",
+		"preinstall": "npx only-allow yarn",
 		"dev": "next dev --turbo --port 3001",
 		"build": "next build",
 		"start": "next start",
@@ -12,11 +12,15 @@
 		"format": "prettier --write '**/*.{js,jsx,ts,tsx,json,css,scss,md}'"
 	},
 	"dependencies": {
+		"@radix-ui/react-dialog": "^1.1.2",
+		"@radix-ui/react-popover": "^1.1.2",
 		"@radix-ui/react-slot": "^1.1.0",
+		"@radix-ui/react-tooltip": "^1.1.3",
 		"@tanstack/react-query": "^5.59.16",
 		"axios": "^1.7.7",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
+		"cmdk": "1.0.0",
 		"framer-motion": "^11.11.11",
 		"lucide-react": "^0.454.0",
 		"next": "14.2.14",
