--- a/package.json
+++ b/package.json
@@ -12,9 +12,14 @@
 		"format": "prettier --write '**/*.{js,jsx,ts,tsx,json,css,scss,md}'"
 	},
 	"dependencies": {
+		"@radix-ui/react-checkbox": "^1.1.2",
 		"@radix-ui/react-dialog": "^1.1.2",
+		"@radix-ui/react-label": "^2.1.0",
 		"@radix-ui/react-popover": "^1.1.2",
+		"@radix-ui/react-radio-group": "^1.2.1",
+		"@radix-ui/react-slider": "^1.2.1",
 		"@radix-ui/react-slot": "^1.1.0",
+		"@radix-ui/react-tabs": "^1.1.1",
 		"@radix-ui/react-tooltip": "^1.1.3",
 		"@tanstack/react-query": "^5.59.16",
 		"axios": "^1.7.7",
