--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"nextjs-toploader": "^3.7.15",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
+		"react-intersection-observer": "^9.13.1",
 		"recoil": "^0.7.7",
 		"sonner": "^1.5.0",
 		"tailwind-merge": "^2.5.4",
