--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
 		"recoil": "^0.7.7",
 		"sonner": "^1.5.0",
 		"tailwind-merge": "^2.5.4",
-		"tailwindcss-animate": "^1.0.7"
+		"tailwindcss-animate": "^1.0.7",
+		"vaul": "^1.1.1",
+		"zustand": "^5.0.1"
 	},
 	"devDependencies": {
 		"@tanstack/eslint-plugin-query": "^5.59.7",
