--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"format": "prettier --write '**/*.{js,jsx,ts,tsx,json,css,scss,md}'"
 	},
 	"dependencies": {
+		"@radix-ui/react-avatar": "^1.1.1",
 		"@radix-ui/react-checkbox": "^1.1.2",
 		"@radix-ui/react-dialog": "^1.1.2",
 		"@radix-ui/react-label": "^2.1.0",
@@ -38,6 +39,7 @@
 		"recoil": "^0.7.7",
 		"sonner": "^1.5.0",
 		"tailwind-merge": "^2.5.4",
+		"tailwind-scrollbar": "^3.1.0",
 		"tailwindcss-animate": "^1.0.7",
 		"vaul": "^1.1.1",
 		"zustand": "^5.0.1"
