--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"clsx": "^2.1.1",
 		"cmdk": "1.0.0",
 		"framer-motion": "^11.11.11",
+		"js-cookie": "^3.0.5",
 		"lucide-react": "^0.454.0",
 		"next": "14.2.14",
 		"next-themes": "^0.3.0",
@@ -46,6 +47,7 @@
 	},
 	"devDependencies": {
 		"@tanstack/eslint-plugin-query": "^5.59.7",
+		"@types/js-cookie": "^3.0.6",
 		"@types/lodash": "^4.17.12",
 		"@types/node": "^20.16.10",
 		"@types/react": "^18.3.11",
